--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -232,7 +232,7 @@
 													<li class="topline"><a href="../repedoctaprov/startup.agnux">Estados de Cuenta</a></li>
 													<li class="topline"><a href="../repprogramacionpagos/startup.agnux">Programaci&oacute;n de pagos</a></li>
 													<li class="topline"><a href="../cxprepantiguedadsaldos/startup.agnux">Antig&uuml;edad de Saldos</a></li>
-
+													<li class="topline"><a href="../cxprepsaldomes/startup.agnux">Saldo Mensual</a></li>
 													<!--
 													<li class="topline"><a href="#">Saldo Mensual</a></li>
 													<li class="topline"><a href="#">Proveedores</a></li>
