--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -153,6 +153,16 @@
 													-->
 												</ul>
 											</li>
+											
+											<li>
+												<a href="#" class="sub">Asignaci&oacute;n &raquo;</a>
+												<ul>
+													<li class="topline"><a href="../repedoctaprov/startup.agnux">Remitentes</a></li>
+													<li class="topline"><a href="../repedoctaprov/startup.agnux">Destinatarios</a></li>
+													<li class="topline"><a href="../repedoctaprov/startup.agnux">Agentes Aduanales</a></li>
+												</ul>
+											</li>
+											
 											<li>
 												<a href="#" class="sub">Reportes &raquo;</a>
 												<ul>
@@ -251,7 +261,7 @@
 												<ul>
 
 													<li class="topline"><a href="../com_requisicion/startup.agnux">Requisici&oacute;n</a></li>
-													<li class="topline"><a href="../com_oc_req/startup.agnux">Autorizaci&oacute;n de Requisicion</a></li>
+													<li class="topline"><a href="../com_oc_req/startup.agnux">Autorizaci&oacute;n de Requisici&oacute;n</a></li>
 
 													<li class="topline"><a href="../comordencompra/startup.agnux">Orden de Compra</a></li>
 													<li class="topline"><a href="../comcompraautorizacion/startup.agnux">Autorizaci&oacute;n de O. C.</a></li>
