--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -160,7 +160,7 @@
 											<li>
 												<a href="#" class="sub">Asignaci&oacute;n &raquo;</a>
 												<ul>
-													<li class="topline"><a href="../repedoctaprov/startup.agnux">Remitentes</a></li>
+													<li class="topline"><a href="../clientsasignarem/startup.agnux">Remitentes</a></li>
 													<li class="topline"><a href="../repedoctaprov/startup.agnux">Destinatarios</a></li>
 													<li class="topline"><a href="../repedoctaprov/startup.agnux">Agentes Aduanales</a></li>
 												</ul>
