git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1061 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -161,10 +161,8 @@
 												<a href="#" class="sub">Asignaci&oacute;n &raquo;</a>
 												<ul>
 													<li class="topline"><a href="../clientsasignarem/startup.agnux">Remitentes</a></li>
-													<!--
-													<li class="topline"><a href="../repedoctaprov/startup.agnux">Destinatarios</a></li>
+													<li class="topline"><a href="../clientsasignadest/startup.agnux">Destinatarios</a></li>
 													<li class="topline"><a href="../repedoctaprov/startup.agnux">Agentes Aduanales</a></li>
-													-->
 												</ul>
 											</li>
 											
