--- a/erp-quimicos/src/main/webapp/vm/clientsasignadest/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/clientsasignadest/startup.vm
@@ -6,17 +6,18 @@
         #include("${layoutheader}")
 		
         <!--  css for this catalogo -->
-        <link rel="stylesheet" href="../../css/modalbox/clientsasignarem/formaclientsasignarem.css" type="text/css" />
-        <link rel="stylesheet" href="../../css/modalbox/clientsasignarem/formaBuscaRemitente.css" type="text/css" />
+        <link rel="stylesheet" href="../../css/modalbox/clientsasignadest/formaclientsasignadest.css" type="text/css" />
+        <link rel="stylesheet" href="../../css/modalbox/clientsasignadest/formaBuscaDestinatario.css" type="text/css" />
+        
         <!--Se utiliza el buscador de clientes de direcciones fiscales-->
         <link rel="stylesheet" href="../../css/modalbox/clientsdf/formaBuscaclientes.css" type="text/css" />
 		
         <!--  js for this catalogo -->
         <script type="text/javascript" src="../../js/components/jquery-form/jquery-form.js"></script>
-        <script type="text/javascript" src="../../js/components/modalbox/clientsasignarem/modalboxclientsasignarem.js"></script>
+        <script type="text/javascript" src="../../js/components/modalbox/clientsasignadest/modalboxclientsasignadest.js"></script>
         <script type="text/javascript" src="../../js/components/modalbox/clientsdf/modalboxBuscacliente.js"></script>
-        <script type="text/javascript" src="../../js/components/modalbox/clientsasignarem/modalboxBuscaRemitente.js"></script>
-        <script type="text/javascript" src="../../js/implements/clientsasignarem/index.js" ></script>
+        <script type="text/javascript" src="../../js/components/modalbox/clientsasignadest/modalboxBuscaDestinatario.js"></script>
+        <script type="text/javascript" src="../../js/implements/clientsasignadest/index.js" ></script>
         
         #include("${layoutmenu}")
         
@@ -89,16 +90,16 @@
             </tr>
         </table>
         
-        <!--form for App Asignacion de Remitentes -->
-        <form id="formaAsignaRemitentes" action="edit.json" method="POST" >
+        <!--form for App Asignacion de Destinatarios -->
+        <form id="formaAsignaDestinatarios" action="edit.json" method="POST" >
         <!--clase la quite por causar problemas      tabulador -->
-                <div id="div_one" class="panelcito_modal clientsasignarem_div_one"  style="display:none;" title="">
+                <div id="div_one" class="panelcito_modal clientsasignadest_div_one"  style="display:none;" title="">
                 
                 <input type="hidden" name="identificador">
 					
-                    <div id="div_two" title="" class="clientsasignarem_div_two">
+                    <div id="div_two" title="" class="clientsasignadest_div_two">
                         <div class="columns on-2">
-                            <div class="fixed column" id="cierra" style="width:720px; padding-left:6px;"><strong>Asignaci&oacute;n de Remitentes</strong></div>
+                            <div class="fixed column" id="cierra" style="width:720px; padding-left:6px;"><strong>Asignaci&oacute;n de Destinatarios</strong></div>
                             <div class="fixed column" style="width:20px; height:25px;">
                                 <div id="close" style="height:25px;background-image:url('../../img/modalbox/close.png'); background-color:; background-position:top; cursor:pointer; background-repeat:no-repeat;"></div>
                             </div>
@@ -106,7 +107,7 @@
                     </div>
                     
                     
-                    <div id="div_three" title="" class="clientsasignarem_div_three">
+                    <div id="div_three" title="" class="clientsasignadest_div_three">
                         <div class="columns" >
                             <div class=" fixed column">
                                 <ul class="pestanas">
@@ -145,7 +146,7 @@
                                                 </tr>
 												
                                                 <tr>
-                                                    <td class="header_grid" style="border-top: 1px solid #C1DAD7; border-bottom: 1px solid #C1DAD7; border-left: 1px solid #FFFFFF; border-right: 1px solid #FFFFFF; background-color:#D4D3D3;">&nbsp;&nbsp;&nbsp;Asignar Remitentes</td>
+                                                    <td class="header_grid" style="border-top: 1px solid #C1DAD7; border-bottom: 1px solid #C1DAD7; border-left: 1px solid #FFFFFF; border-right: 1px solid #FFFFFF; background-color:#D4D3D3;">&nbsp;&nbsp;&nbsp;Asignar Destinatarios</td>
 												</tr>
                                                 <tr>
                                                     <td >
@@ -155,13 +156,13 @@
 															</tr>
                                                             <tr>
                                                                 <td width="10"></td>
-                                                                <td width="70">No.&nbsp;Remitente</td>
-                                                                <td width="100"><input type="text" name="noremitente" style="width:100px; border:1px solid #000;"></td>
-                                                                <td width="15"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_noremitente"></div></td>
-                                                                <td width="80"><a href="agregar_remitente">&nbsp;(Agregar)</a></td>
+                                                                <td width="70">No.&nbsp;Destinatario</td>
+                                                                <td width="100"><input type="text" name="nodest" style="width:100px; border:1px solid #000;"></td>
+                                                                <td width="15"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_nodest"></div></td>
+                                                                <td width="80"><a href="agregar_dest">&nbsp;(Agregar)</a></td>
                                                                 <td width="70">Razon&nbsp;social</td>
-                                                                <td width="280"><input type="text" name="nombre_remitente" style="width:280px;"></td>
-                                                                <td width="55"><a href="busca_remitente">&nbsp;(Buscar)</a></td>
+                                                                <td width="280"><input type="text" name="nombre_dest" style="width:280px;"></td>
+                                                                <td width="55"><a href="busca_dest">&nbsp;(Buscar)</a></td>
                                                                 <td width="15"></td>
                                                             </tr>
                                                         </table>
@@ -174,15 +175,15 @@
 															<thead>
 																<tr>
 																	<td width="60"><div class="delete">&nbsp;#</div></td>
-																	<td width="120">&nbsp;No.&nbsp;Remitente</td>
+																	<td width="120">&nbsp;No.&nbsp;Destinatario</td>
 																	<td width="400">&nbsp;Razon&nbsp;social</td>
 																	<td width="120">&nbsp;RFC</td>
 																</tr>
 															</thead>
 														</table>
 														<div class="contenedor_grid" style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:870; height: 115px; border:1px solid #C1DAD7 !important;">	
-															<table class="tabla_remitentes">
-																<tbody style="background-color: #FFFFFF;" valign="top" id="grid_remitentes">
+															<table class="tabla_destinatarios">
+																<tbody style="background-color: #FFFFFF;" valign="top" id="grid_destinatarios">
 																	
 																</tbody>
 															</table>
@@ -353,16 +354,16 @@
 		</div>
 		
 		
-		<!--Aqui comienza el formulario para el buscador de REMITENTES-->
-		<div class="buscador_remitentes" style="display:none;">	
-			<table width="100%" border="0" class="formaBusqueda_remitentes">
+		<!--Aqui comienza el formulario para el buscador de Destinatarios-->
+		<div class="buscador_buscadestinatario" style="display:none;">	
+			<table width="100%" border="0" class="formaBusqueda_buscadestinatario">
 				<tr>
 					<td>
-						<div class="div_dos_remitentes">
+						<div class="div_dos_buscadestinatario">
 							<table width="100%" border="0">
 								<thead>
 									<tr>
-										<td colspan="8" height="50" valign="top"><div class="titulo_remitentes" width="100%"><strong>Buscador de Remitentes</strong></div></td>
+										<td colspan="8" height="50" valign="top"><div class="titulo_buscadestinatario" width="100%"><strong>Buscador de Destinatarios</strong></div></td>
 									</tr>
 								</thead>
 								<tbody>
@@ -381,7 +382,7 @@
 													<td width="60">Filtro por</td>
 													<td width="150"><select name="filtropor" style="width:150px;"></select></td>
 													<td width="70" align="right">
-														<input type="button" id="boton_buscaremitente" class="onmouseOutBuscar">
+														<input type="button" id="boton_buscadestinatario" class="onmouseOutBuscar">
 													</td>
 												</tr>
 											</table>
