git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1063 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -162,7 +162,7 @@
 												<ul>
 													<li class="topline"><a href="../clientsasignarem/startup.agnux">Remitentes</a></li>
 													<li class="topline"><a href="../clientsasignadest/startup.agnux">Destinatarios</a></li>
-													<li class="topline"><a href="../repedoctaprov/startup.agnux">Agentes Aduanales</a></li>
+													<li class="topline"><a href="../clientsasignaagena/startup.agnux">Agentes Aduanales</a></li>
 												</ul>
 											</li>
 											
